--- a/MoviesCollection/MoviesCollection.Api/appsettings.json
+++ b/MoviesCollection/MoviesCollection.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoviesAppConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MoviesCollection.Dev;Persist Security Info=True;Connection Timeout=30;"
+  }
 }
