--- a/MoviesCollection/MoviesCollection.Api/appsettings.Development.json
+++ b/MoviesCollection/MoviesCollection.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoviesAppConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MoviesCollection.Dev;Persist Security Info=True;Connection Timeout=30;"
   }
 }
