--- a/MoviesCollection/MoviesCollection.Entities/MoviesCollection.Entities.csproj
+++ b/MoviesCollection/MoviesCollection.Entities/MoviesCollection.Entities.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MoviesCollection.BusinessApp.Dtos\MoviesCollection.BusinessApp.Dtos.csproj" />
+  </ItemGroup>
+
 </Project>
